deploy/openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: industrial-datagen
  labels:
    app.kubernetes.io/name: industrial-datagen
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: industrial-datagen
  template:
    metadata:
      labels:
        app.kubernetes.io/name: industrial-datagen
    spec:
      containers:
        - name: industrial-datagen
          image: quay.io/rh-ee-mhillsma/industrial-datagen:latest
          ports:
            - containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
