deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: industrial-datagen
  labels:
    app.kubernetes.io/name: industrial-datagen
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: industrial-datagen
